fix spacings

--- a/src/app/scss/layout/_header.scss
+++ b/src/app/scss/layout/_header.scss
@@ -1,7 +1,7 @@
 header.main-header {
   display: flex;
   justify-content: center;
-
+  @include mt(4);
 
   .mesh-image {
     display: none;
@@ -25,6 +25,7 @@ header.main-header {
   .main-heading {
     font-size: 48px;
     text-align: center;
+    @include mb(3)
   }
   .working-hours {
     width: 90%;
@@ -93,6 +94,10 @@ header.main-header {
       z-index: -1;
     }
 
+    header.main-header {
+      @include mt(6);
+    }
+
     .working-hours {
       width: 100%;
       article {
@@ -119,7 +124,7 @@ header.main-header {
       width: 40%;
 
       & > * {
-        @include my(0);
+        @include my(2);
       }
     }
     
